--- a/hw_05-ivanova/index.html
+++ b/hw_05-ivanova/index.html
@@ -6,6 +6,6 @@
     <title>Калькулятор</title>
   </head>
   <body>
-    <script src="scripts.js"></script>
+    <script src="scripts.js" defer></script>
   </body>
 </html>
